Implementação do Liskov Substitution Principle.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,14 @@
             }
         ],
         "class-methods-use-this": "off",
+        "@typescript-eslint/naming-convention": [
+            "error",
+            {
+              "selector": "interface",
+              "prefix": ["I"],
+              "format": ["PascalCase"]
+            }
+        ],
         "import/extensions": [
             "error",
             "ignorePackages",
