--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.9",
+    "@types/nodemailer": "^6.4.0",
     "@types/uuid": "^8.3.0",
     "@types/uuidv4": "^5.0.0",
     "bcryptjs": "^2.4.3",
@@ -20,6 +21,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "pg": "^8.5.1",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
